--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -10,5 +10,5 @@
     <link rel="stylesheet" href="../css/product.css" />
     <script src="https://unpkg.com/@popperjs/core@2" defer></script>
     <script src="js/bootstrap.js" defer></script>
-    <title>Document</title>
+    <title><%= pageTitle %></title>
 </head>
