--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,9 +1,17 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="/">link</a>
-            </li>
-        </ul>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link <%= path==='/products'? " active":'' %></a>" href="/products">Products</a>
+                <a class="nav-link  <%= path==='/add-to-card'? " active":'' %></a>" href="#">Add To card</a>
+                <a class="nav-link <%= path==='/add-product'? " active":'' %>" href="/admin/add-product">Add product</a>
+                <a class="nav-link <%= path==='/admin-page'? " active":'' %></a>" href="#">Admin Page</a>
+            </div>
+        </div>
     </div>
 </nav>
