--- a/views/includes/heading.ejs
+++ b/views/includes/heading.ejs
@@ -1,7 +1,7 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-5 p-5">ECOMMERCE</h1>
+            <h1 class="display-5 p-5">Diamonds</h1>
             <br>
             <h3 class="display-6 ">
                 With NODE JS and MONGODB
