--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -7,10 +7,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link <%= path==='/products'? " active":'' %></a>" href="/products">Products</a>
-                <a class="nav-link <%= path==='/add-to-card'? " active":'' %></a>" href="#">Add To card</a>
+                <a class="nav-link <%= path==='/adm'? " active":'' %>" href="#">Products</a>
+                <a class="nav-link <%= path==='/add-to-card'? " active":'' %>" href="#">Add To card</a>
                 <a class="nav-link <%= path==='/add-product'? " active":'' %>" href="/admin/add-product">Add product</a>
-                <a class="nav-link <%= path==='/admin-page'? " active":'' %></a>" href="#">Admin Page</a>
+                <a class="nav-link <%= path==='/admin/products'? " active":''%>" href="/admin/products">Admin Page</a>
             </div>
         </div>
     </div>
