--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,8 +166,7 @@ form {
 }
 
 .card__image img {
-  width: 100%;
-}
+  width: 100%;}
 
 .card__actions {
   padding: 1rem;
@@ -179,7 +178,7 @@ form {
   margin: 0 0.25rem;
 }
 
-.btn {
+/* .btn {
   display: inline-block;
   padding: 0.25rem 1rem;
   text-decoration: none;
@@ -189,13 +188,13 @@ form {
   background: white;
   border-radius: 3px;
   cursor: pointer;
-}
+} */
 
-.btn:hover,
+/* .btn:hover,
 .btn:active {
   background-color: #00695c;
   color: white;
-}
+} */
 
 @media (min-width: 768px) {
   .main-header__nav {
