--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -23,7 +23,11 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%= product._id %> " class="btn btn-primary">details</a>
+
+                                    <a href="/admin/edit-product/<%= product._id %>?edit=true"
+                                        class="btn btn-warning">Edit</a>
+
+                                    <a href="/products/<%= product._id %> " class="btn btn-danger">Delete</a>
                                 </div>
                             </article>
                             <% } %>
