--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -25,9 +25,9 @@
                                 <div class="card__actions">
 
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true"
-                                        class="btn btn-warning">Edit</a>
+                                        class="btn btn-outline-warning">Edit</a>
 
-                                    <a href="/products/<%= product._id %> " class="btn btn-danger">Delete</a>
+                                    <a href="/products/<%= product._id %> " class="btn btn-outline-danger">Delete</a>
                                 </div>
                             </article>
                             <% } %>
