--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -23,7 +23,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%= product._id %> " class="btn btn-primary">details</a>
+                                    <a href="/products/<%= product._id %> " class="btn btn-outline-secondary">details</a>
                                 </div>
                             </article>
                             <% } %>
