--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/cart.css">
     <link rel="stylesheet" href="/css/product.css" />
     <script src="https://unpkg.com/@popperjs/core@2" defer></script>
     <script src="js/bootstrap.js" defer></script>
