--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -24,7 +24,7 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product._id %> " class="btn btn-outline-secondary">details</a>
-                                    <%-include('../includes/add-to-cart')  %> 
+                                    <%- include('../includes/add-to-cart.ejs',{product:product})  %> 
                                 </div>
                             </article>
                             <% } %>
