--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <%- include('../includes/heading.ejs') %>
-        <div class="vh-100 d-flex justify-content-center align-items-center">
+        <div class="my-2 d-flex justify-content-center align-items-center">
             <div class="container">
                 <div class="row d-flex justify-content-center">
                     <div class="col-12 col-md-8 col-lg-6">
@@ -11,12 +11,12 @@
                                     <p class=" mb-5">Please enter your login and password!</p>
                                     <div class="mb-3">
                                         <label for="email" class="form-label ">Email address</label>
-                                        <input type="email" class="form-control" id="email"
+                                        <input type="email" name="email" class="form-control" id="email"
                                             placeholder="name@example.com">
                                     </div>
                                     <div class="mb-3">
                                         <label for="password" class="form-label ">Password</label>
-                                        <input type="password" class="form-control" id="password" placeholder="*******">
+                                        <input type="password" name="password" class="form-control" id="password" placeholder="*******">
                                     </div>
                                     <p class="small"><a class="text-primary" href="forget-password.html">Forgot
                                             password?</a></p>
@@ -25,11 +25,9 @@
                                     </div>
                                 </form>
                                 <div>
-                                    <p class="mb-0  text-center">Don't have an account? <a href="signup.html"
-                                            class="text-primary fw-bold">Sign
-                                            Up</a></p>
+                                    <p class="my-1  text-center">Don't have an account? <a href="/signup"
+                                            class="text-primary fw-bold">Sign Up</a></p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
